--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>discovery-service</module>
     <module>gateway-service</module>
     <module>zipkin-service</module>
+    <module>config-service</module>
   </modules>
   <dependencyManagement>
     <dependencies>
