--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>gateway-service</module>
 		<module>zipkin-service</module>
 		<module>config-service</module>
+		<module>content-common</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
